    This caused issues in automata with t acceptance.  Fixing the code
    by replacing 3' by 3 this also made the third argument of
    is_terminal_automaton(), an optional boolean indicating whether
    transition between SCCs should be ignored when computing 3',
    completely obsolete.  This third argument has been marked as
    depreated.  (Issue #553)

New in spot 2.11.6  (2023-08-01)

  Bug fixes:

  - Running command lines such as "autfilt input.hoa -o output-%L.hoa"
    where thousands of different filenames can be created failed with
    "Too many open files".  (Issue #534)

  - Using --format=... on a tool that output formulas would force
    the output on standard output, even when --output was given.

  - Using "randltl -S" did not correctly go through the SERE printer
    functions.

  - Our copy of BuDDy's bdd_forall() had a 20 year old typo that
    caused cache entries from bdd_exist() and bdd_forall() to be
    mixed.  Spot was safe from this bug because it was only using
    bdd_exist().  (Issue #535)

  - Work around recent Pandas and GCC changes.

New in spot 2.11.5  (2023-04-20)

  Bug fixes:

  - Fix spurious failure of ltlsynt2.test when Python is not installed
    (issue #530).

  - Building from the git repository would fail to report a missing
    emacs (issue #528).

  - Fix exception raised by aut1.intersecting_run(aut2).as_twa()
    because the run did not match transitions present in aut1
    verbatim.  We also changed the behavior of as_twa() to not merge
    identical states.

  - Fix segfaults occuring in determinization of 1-state terminal
    automata.

  - Fix incorrect assertion in game solver when the edge vector
    contains deleted transitions.

New in spot 2.11.4  (2023-02-10)

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

  Bug fixes:

  - When merging initial states from state-based automata with
    multiple initial states (because Spot supports only one), the HOA